# profanity-filter

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml
.github/workflows/: build-image.yml
profanity_filter/: config.py  profanity_filter.py  types_.py  web.py
profanity_filter/data/: en_core_web_sm_profane_words.txt  profanity_phrases.txt
tests/: conftest.py  test_profanity_filter.py
