[tool.poetry]
name = "profanity-filter2"
version = "1.4.3"
description = "A Python library for detecting and filtering profanity"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
maintainers = ["Ruslan Gareev <mail@ruslangareev.ru>"]
license = "GPL-3.0+"
readme = "README.md"
repository = "https://github.com/neorusa/profanity-filter"
keywords = ["library", "profanity", "filter", "censor"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3"
ordered-set = "^3.0"
cached-property = "^1.5"
dataclasses = { version = "^0.6.0", python = "~3.6" }
poetry-version = "^0.1.3"
more-itertools = "^8.0"
pydantic = "^1.3"
"ruamel.yaml" = "^0.15.89"
numpy = "^1.20"


[tool.poetry.group.dev.dependencies]
pytest = "^3.8"
dill = "^0.3.4"
ordered-set-stubs = "^0.1.3"



[tool.poetry.group.web.dependencies]
appdirs = "^1.4.4"
fastapi = "^0.85.1"

[tool.poetry.scripts]
profanity_filter = 'profanity_filter.console:main'
